--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ html {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3.5em;
+  /* font-weight: 800; */
   letter-spacing: 3px;
   margin: 30px;
 }
@@ -19,8 +20,21 @@ h2 {
 }
 
 h3 {
-  font-size: 2em;
+  font-size: 1.5em;
   letter-spacing: 3px;
   margin: 50px 0;
   padding-bottom: 20px;
+}
+
+h4 {
+  font-size: 1.2em;
+  margin: 25px;
+  padding-bottom: 25px;
+}
+
+@media only screen and (max-width: 640px) {
+  img {
+    margin: 0 10px;
+    width: 90%;
+  }
 }
