Change photo, add bulma credit, fix email link

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ html {
 }
 
 .image {
-  max-width: 600px;
-  max-height: 300px;
+  max-width: 500px;
+  /* max-height: 300px; */
   box-shadow: 8px 12px 12px 5px rgba(0, 0, 0, 0.8);
 }
 
