--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,13 @@ html {
   font-family: "Arapey", serif;
 }
 
-.image {
+img {
   box-shadow: 8px 12px 12px 5px rgba(0, 0, 0, 0.8);
 }
+
+/* .image {
+  box-shadow: 8px 12px 12px 5px rgba(0, 0, 0, 0.8);
+} */
 
 /* .is-centered-flexy {
   display: flex;
@@ -17,4 +21,10 @@ html {
 
 .title {
   letter-spacing: 4px;
+}
+
+@media (max-width: 678px) {
+  img {
+    max-width: 460px;
+  }
 }
