--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,11 @@ img {
   }
 }
 
-.hero {
-  background: red;
+#ometepe {
+  background: black;
   background-image: url("/images/painting.jpg");
   background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
