Change background color, put form and modal window

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body,
 html {
-  background-color: #40407a;
+  /* background-color: #40407a; */
+  /* background-color: #fed330; */
+  background-color: #fd9644;
   font-family: "Arapey", serif;
 }
 
