Change photos to match aspect ratio, added top margin to title

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ html {
   /* background-color: #40407a; */
   /* background-color: #fed330; */
   background-color: #fd9644;
+  /* background-color: #ffb142; */
   font-family: "Arapey", serif;
 }
 
